--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,14 @@
+html{
+  background-color: #0A192F;
+  color: #fff;
+}
+html body{
+  background-color: #0A192F;
+  color: #fff;
+  font-family:"Arial"; 
+}
+
+
 .App{
   text-align: center;
 
