--- a/web-app/client/src/css/App.css
+++ b/web-app/client/src/css/App.css
@@ -1,10 +1,8 @@
 html{
-  background-color: #0A192F;
-  color: #fff;
+  background-color: white;
 }
 html body{
-  background-color: #0A192F;
-  color: #fff;
+  background-color: white;
   font-family:"Arial"; 
 }
 
