Add dataScroller and remove Datatable
DataTable has been replaced by dataScroller and DataTable.css has changed to DataScroll.css

--- a/web-app/client/src/css/DataScroll.css
+++ b/web-app/client/src/css/DataScroll.css
@@ -13,3 +13,18 @@
 .p-datatable-thead span{
     color:white;
 }
+.offer{
+    text-align: left;
+}
+.offer-title{
+    font-weight: 700;
+    font-size: 150%;
+}
+.offer-detail{
+    margin-left: 95%;
+    margin-bottom: 0%;
+}
+.offer-delete{
+    margin-left: 95%;
+    margin-bottom: 0%;
+}
