--- a/web-app/client/src/css/Chip.css
+++ b/web-app/client/src/css/Chip.css
@@ -8,3 +8,13 @@
     margin-left: 5%;
     margin-right: 5%;
 }
+.You{
+    background-color: rgb(136, 211, 255) !important;
+}
+.Other{
+    background-color: rgb(150, 170, 196) !important;
+}
+.card-body-chat{
+    height: 300px !important;
+    overflow-y: scroll;
+}
